// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render switch checked 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  position: relative;
  width: calc(2 * 18px);
  height: 18px;
  border-radius: calc( ( 18px + 2 * 2px + 2 * 1px ) * 0.5 );
  padding: 2px;
  background-color: #ffffff;
  border: 1px solid #00000040;
  opacity: 1;
  -webkit-transition: box-shadow 0.3s ease-in-out;
  transition: box-shadow 0.3s ease-in-out;
}

.c3 {
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.c2 {
  width: 18px;
  height: 18px;
  -webkit-transform: translateX( 18px );
  -ms-transform: translateX( 18px );
  transform: translateX( 18px );
  border-radius: 50%;
  -webkit-transition: background-color 0.15s ease-in-out,-webkit-transform 0.15s ease-in-out;
  -webkit-transition: background-color 0.15s ease-in-out,transform 0.15s ease-in-out;
  transition: background-color 0.15s ease-in-out,transform 0.15s ease-in-out;
  background-color: #6A50F2;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="pbl-switch"
    >
      <div
        class="c2"
        data-testid="pbl-switch-handle"
      />
      <input
        checked=""
        class="c3"
        data-testid="pbl-switch-input"
        id="custom-id"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`Render switch unchecked 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  position: relative;
  width: calc(2 * 18px);
  height: 18px;
  border-radius: calc( ( 18px + 2 * 2px + 2 * 1px ) * 0.5 );
  padding: 2px;
  background-color: #ffffff;
  border: 1px solid #00000040;
  opacity: 1;
  -webkit-transition: box-shadow 0.3s ease-in-out;
  transition: box-shadow 0.3s ease-in-out;
}

.c3 {
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.c2 {
  width: 18px;
  height: 18px;
  -webkit-transform: translateX( 0 );
  -ms-transform: translateX( 0 );
  transform: translateX( 0 );
  border-radius: 50%;
  -webkit-transition: background-color 0.15s ease-in-out,-webkit-transform 0.15s ease-in-out;
  -webkit-transition: background-color 0.15s ease-in-out,transform 0.15s ease-in-out;
  transition: background-color 0.15s ease-in-out,transform 0.15s ease-in-out;
  background-color: #808080;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="pbl-switch"
    >
      <div
        class="c2"
        data-testid="pbl-switch-handle"
      />
      <input
        class="c3"
        data-testid="pbl-switch-input"
        id="custom-id"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`Render switch with label 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1rem;
  line-height: 1.375em;
  margin-bottom: 0.5em;
  margin-bottom: 0px;
  margin-left: 8px;
}

<label
  data-testid="pbl-switch-label"
  for="custom-id"
>
  <h4
    class="c0"
  >
    I am a 
    <strong>
      label
    </strong>
  </h4>
</label>
`;
